<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="15dp"
    android:layout_height="match_parent"
    tools:context="com.kanyakubjbrahminsamiti.akhil.wordgames.ActivityMainThree">
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="TextView"
        android:visibility="invisible"
        android:textSize="25sp"
        android:textStyle="bold"

        android:layout_marginTop="80dp"

        />

    <LinearLayout

android:id="@+id/parentgameacg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="67dp">

            <TextView
                android:id="@+id/timersecacg"
                android:layout_width="110dp"
                android:layout_height="50dp"


                android:gravity="center|left|left"
                android:padding="5px"
                android:text="@string/time"
                android:textColor="#e0232d"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/minutesacg"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"

                android:padding="5px"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:text="00" />

        </RelativeLayout>
        <!--
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                >

                <Chronometer
                    android:id="@+id/chromometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="32dp"
                    android:layout_centerHorizontal="true"


                    />
            </RelativeLayout>-->

        <RelativeLayout

            android:id="@+id/containeracg"

            android:layout_width="match_parent"

            android:layout_height="match_parent"

            android:orientation="vertical"

            android:padding="20dp">

            <EditText

                android:id="@+id/messageEditacg"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_alignBaseline="@+id/chatSendButtonacg"
                android:focusableInTouchMode="true"
                android:layout_alignBottom="@+id/chatSendButtonacg"
                android:layout_marginEnd="28dp"
                android:layout_toStartOf="@+id/chatSendButtonacg"
                android:hint="@string/type_message" />

            <Button

                android:id="@+id/chatSendButtonacg"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="48dp"
                android:background="#1b5e20"
                android:text="@string/send"
                android:textColor="@color/background_material_light" />


            <ListView

                android:id="@+id/messagesContaineracg"

                android:layout_width="match_parent"

                android:layout_height="240dp"


                android:layout_above="@+id/messageEditacg"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="11dp"
                android:divider="@null"
                android:listSelector="@android:color/transparent"
                android:transcriptMode="alwaysScroll" />

            <Button
                android:id="@+id/cantacg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignEnd="@+id/messageEditacg"
                android:layout_alignParentBottom="true"
                android:background="#e0232d	"
                android:text="@string/nah_i_can_t"
                android:textColor="#ffff" />

            <TextView
                android:id="@+id/textView10opponentacg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"

                android:text="opponent:"
                android:textColor="#ffff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView11myacg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:textColor="#ffff"
                android:textSize="15sp"
                android:text="you:" />



        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/select_layoutacg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        >

        <Button
            android:layout_marginRight="5dp"
            android:id="@+id/host"
            android:textColor="#FFFF"
            android:text= "       host      "
            android:background="@drawable/background_button_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:textColor="#ffff"
            android:id="@+id/join"
            android:background="@drawable/backgroud_button_blue"
            android:text="    join   "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
